# sos_plugin

./: CMakeLists.txt  qgsmaptoolsensorinfo.cpp  qgsmaptoolsensorinfo.h  qgssensorinfodialog.cpp  qgssensorinfodialog.h  qgssensorinfodialogbase.ui  qgssoscapabilities.cpp  qgssoscapabilities.h  qgssosconnectiondialog.cpp  qgssosconnectiondialog.h  qgssosconnectiondialogbase.ui  qgssosplugin.cpp  qgssosplugin.h  qgssossourceselect.cpp  qgssossourceselect.h  qgssossourceselectbase.ui  qgswatermldata.cpp  qgswatermldata.h  qgsxmldata.cpp  qgsxmldata.h  resources.qrc  sos_plugin_installer_win64.nsi
